@@ -36,6 +36,7 @@ v15.0.00
 		System: added South African Rand as currency
 		System: fixed missing form validation for dropdowns created with User Custom Fields
 		Attendance: fixed GROUP BY issue in moduleFunctions.php when MySQL is using only_full_group_by
+		Attendance: adjusted attendance checking CLI script to only include lessons whose start time has already passed
 		Behaviour: fixed typo in three settings
 		Departments: fixed bug preventing students from seeing other students in a class
 		Finance: set name of outgoing email to school name, not user's name
